--- a/pwacam-project/public/index.html
+++ b/pwacam-project/public/index.html
@@ -5,6 +5,22 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Safari configurations to also looks and feels nice on IOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes"> <!-- This tells safari to treat this as a A2HS app -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black"> <!-- How the status bar will display on the device -->
+  <meta name="apple-mobile-web-app-title" content="iOS PWAGram"> <!-- Title, usually inferred from <title> but can be renamed -->
+  <link rel="apple-touch-icon" href="./src/images/icons/apple-icon-57x57.png" sizes="57x57"> <!-- point what icon iOS can use -->
+  <link rel="apple-touch-icon" href="./src/images/icons/apple-icon-60x60.png" sizes="60x60">
+  <link rel="apple-touch-icon" href="./src/images/icons/apple-icon-72x72.png" sizes="72x72">
+  <link rel="apple-touch-icon" href="./src/images/icons/apple-icon-76x76.png" sizes="76x76">
+  <link rel="apple-touch-icon" href="./src/images/icons/apple-icon-114x114.png" sizes="114x114">
+  <link rel="apple-touch-icon" href="./src/images/icons/apple-icon-120x120.png" sizes="120x120">
+  <link rel="apple-touch-icon" href="./src/images/icons/apple-icon-144x144.png" sizes="144x144">
+  <link rel="apple-touch-icon" href="./src/images/icons/apple-icon-152x152.png" sizes="152x152">
+  <link rel="apple-touch-icon" href="./src/images/icons/apple-icon-180x180.png" sizes="180x180">
+  <!-- End of Safari configurations -->
+
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PWAGram</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
