--- a/pwacam-project/public/index.html
+++ b/pwacam-project/public/index.html
@@ -110,7 +110,7 @@
   </div>
 </div>
 <script defer src="/src/js/material.min.js"></script>
-<script src="/src/js/app.js"></script>
-<script src="/src/js/feed.js"></script>
+<script src="./src/js/app.mjs" type="module"></script>
+<script src="./src/js/feed.mjs" type="module"></script>
 </body>
 </html>
