Section 5: Static Caching / Precaching (app.mjs)

--- a/pwacam-project/public/index.html
+++ b/pwacam-project/public/index.html
@@ -89,7 +89,7 @@
           </div>
         </form>
       </div>
-      <img src="/src/images/main-image.jpg"
+      <img src="./src/images/main-image.jpg"
            alt="Explore the City"
            class="main-image">
       <div class="page-content">
@@ -109,7 +109,7 @@
     </main>
   </div>
 </div>
-<script defer src="/src/js/material.min.js"></script>
+<script defer src="./src/js/material.min.js"></script>
 <script src="./src/js/app.mjs" type="module"></script>
 <script src="./src/js/feed.mjs" type="module"></script>
 </body>
