--- a/pwacam-project/public/offline/index.html
+++ b/pwacam-project/public/offline/index.html
@@ -76,8 +76,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css"
     />
-    <link rel="stylesheet" href="./src/css/app.css" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="stylesheet" href="../src/css/app.css" />
+    <link rel="manifest" href="../manifest.json" />
   </head>
   <body>
     <div id="app">
@@ -113,6 +113,12 @@
               >
                 Enable Notifications
               </button>
+              <button
+                id="unregister-service-worker-btn"
+                class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
+              >
+                Disable SW
+              </button>
             </div>
           </nav>
         </div>
@@ -121,7 +127,10 @@
             <h5 class="text-center mdl-color-text--primary">
               Hm... this page seems to not have been cached yet :/
             </h5>
-            <p>But you can always go back to <a href="/">home</a> and try other pages</p>
+            <p>
+              But you can always go back to <a href="/">home</a> and try other
+              pages
+            </p>
           </div>
         </main>
       </div>
