--- a/pwacam-project/public/help/index.html
+++ b/pwacam-project/public/help/index.html
@@ -156,7 +156,7 @@
       </div>
     </div>
 
-    <script defer src="../src/js/material.min.js"></script>
-    <script src="../src/js/app.js"></script>
+    <script defer src="../src/vendor/material.min.js"></script>
+    <script src="../src/js/app.mjs"></script>
   </body>
 </html>
