--- a/pwacam-project/public/index.html
+++ b/pwacam-project/public/index.html
@@ -129,22 +129,15 @@
               <div
                 class="input-section mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
               >
-                <input class="mdl-textfield__input" type="text" id="title" />
-                <label class="mdl-textfield__label" for="title" name="title"
-                  >Title</label
-                >
+                <input class="mdl-textfield__input" name="title" type="text" id="title" />
+                <label class="mdl-textfield__label" for="title">Title</label>
               </div>
               <div
                 class="input-section mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
                 id="manual-location"
               >
-                <input class="mdl-textfield__input" type="text" id="location" />
-                <label
-                  class="mdl-textfield__label"
-                  for="location"
-                  name="location"
-                  >Location</label
-                >
+                <input class="mdl-textfield__input" name="location" type="text" id="location" />
+                <label class="mdl-textfield__label" for="location">Location</label>
               </div>
               <br />
               <div>
@@ -200,7 +193,7 @@
         </main>
       </div>
     </div>
-    <script defer src="./src/js/material.min.js"></script>
+    <script defer src="./src/vendor/material.min.js"></script>
     <script src="./src/js/app.mjs" type="module"></script>
     <script src="./src/js/feed.mjs" type="module"></script>
   </body>
