--- a/pwacam-project/public/offline/index.html
+++ b/pwacam-project/public/offline/index.html
@@ -16,48 +16,48 @@
     <!-- Title, usually inferred from <title> but can be renamed -->
     <link
       rel="apple-touch-icon"
-      href="./src/images/icons/apple-icon-57x57.png"
+      href="../src/images/icons/apple-icon-57x57.png"
       sizes="57x57"
     />
     <!-- point what icon iOS can use -->
     <link
       rel="apple-touch-icon"
-      href="./src/images/icons/apple-icon-60x60.png"
+      href="../src/images/icons/apple-icon-60x60.png"
       sizes="60x60"
     />
     <link
       rel="apple-touch-icon"
-      href="./src/images/icons/apple-icon-72x72.png"
+      href="../src/images/icons/apple-icon-72x72.png"
       sizes="72x72"
     />
     <link
       rel="apple-touch-icon"
-      href="./src/images/icons/apple-icon-76x76.png"
+      href="../src/images/icons/apple-icon-76x76.png"
       sizes="76x76"
     />
     <link
       rel="apple-touch-icon"
-      href="./src/images/icons/apple-icon-114x114.png"
+      href="../src/images/icons/apple-icon-114x114.png"
       sizes="114x114"
     />
     <link
       rel="apple-touch-icon"
-      href="./src/images/icons/apple-icon-120x120.png"
+      href="../src/images/icons/apple-icon-120x120.png"
       sizes="120x120"
     />
     <link
       rel="apple-touch-icon"
-      href="./src/images/icons/apple-icon-144x144.png"
+      href="../src/images/icons/apple-icon-144x144.png"
       sizes="144x144"
     />
     <link
       rel="apple-touch-icon"
-      href="./src/images/icons/apple-icon-152x152.png"
+      href="../src/images/icons/apple-icon-152x152.png"
       sizes="152x152"
     />
     <link
       rel="apple-touch-icon"
-      href="./src/images/icons/apple-icon-180x180.png"
+      href="../src/images/icons/apple-icon-180x180.png"
       sizes="180x180"
     />
     <!-- End of Safari configurations -->
@@ -135,7 +135,7 @@
         </main>
       </div>
     </div>
-    <script defer src="./src/js/material.min.js"></script>
-    <script src="./src/js/app.mjs" type="module"></script>
+    <script defer src="../src/vendor/material.min.js"></script>
+    <script src="../src/js/app.mjs" type="module"></script>
   </body>
 </html>
